# RPiSpotQtClient

./: .gitignore  CMakeLists.txt  README.md  RPiSpotQtClient.cpp  RPiSpotQtClient.h  RPiSpotQtClient.kdev4  RPiSpotQtClient.pro  main.cpp  rm.sh
